fix a bug
When the squares are created , the game layout should be a complete
white square with black border , however there is some horiziontal
yellow line in between the white suqare. Also , the border width of the
bottom is less than other.

It is found out that ,the row of inline block div element has some extra
vertical gap between them. This extra space is for char like 'g','y' etc.
Settting the parent element text size = 0 then ok.

--- a/style.css
+++ b/style.css
@@ -18,5 +18,8 @@
     width: 550px;
     height: 550px;
     flex-shrink:0;
-    background-color: black;
+    background-color: gold;
+    border-width: 5px;
+    border-style: solid;
+    font-size: 0px;
 }
